--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     position: relative;
 }
 
-.box {
+.panel {
     position: absolute;
     z-index: 9;
     background-color: #1f1f1f;
@@ -16,36 +16,35 @@ body {
     color: #fff;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     font-weight: 600;
+    width: 150px;
 }
 
-
-.box-header {
+.panel-header {
     padding: 5px;
-    z-index: 10;
     background-color: #000000;
     display: flex;
     justify-content: space-between;
 }
 
-.box-header span {
+.panel-header span {
     cursor: pointer;
     flex: 1 1 auto;
     text-align: left;
 }
 
-.box-header span::before {
+.panel-header span::before {
     font-family: "lil-gui";
-    content: "▾";
+    content: attr(data-before);
     padding-right: 2px;
     display: inline-block;
 }
 
-.box-move {
+.draggable {
     cursor: move;
     flex: 0 0 24px;
 }
 
-.box-move::before {
+.draggable::before {
     font-family: "lil-gui";
     content: '✥';
     font-size: 16px;
@@ -53,8 +52,11 @@ body {
     display: inline-block;
 }
 
-.box-content {
+.panel-content {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+.panel-content svg{
+    width: 100%;
 }
