--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     font-weight: 600;
     width: 150px;
+    margin-left: 16px;
 }
 
 .panel-header {
