--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
     color: #fff;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     font-weight: 600;
-    width: 150px;
+    width: 200px;
     margin-left: 16px;
 }
 
@@ -60,4 +60,5 @@ body {
 }
 .panel-content svg{
     width: 100%;
+    height: 100%;
 }
