--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ body {
     color: #fff;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     font-weight: 600;
-    width: 200px;
     margin-left: 16px;
 }
 
@@ -54,9 +53,8 @@ body {
 }
 
 .panel-content {
-    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    transition: height 0.2s ease-out;
 }
 .panel-content svg{
     width: 100%;
